# compression-test

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/benches/: archive.rs  benchmark.rs  compression.rs  zip_br.rs  zip_gzip.rs  zip_snappy.rs  zip_zstd.rs
app/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
test-brotli/: Cargo.toml
test-brotli/src/: lib.rs
test-brotli/tests/: main.rs
test-gzip/: Cargo.toml
test-gzip/src/: lib.rs
test-gzip/tests/: main.rs
test-snappy/: Cargo.toml
test-snappy/src/: lib.rs
test-snappy/tests/: main.rs
test-tar/: Cargo.toml
test-tar/src/: lib.rs
test-tar/tests/: main.rs
test-zip_br/: Cargo.toml
test-zip_br/src/: lib.rs
test-zip_br/tests/: main.rs
test-zip_gzip/: Cargo.toml
test-zip_gzip/src/: lib.rs
test-zip_gzip/tests/: main.rs
test-zip_snappy/: Cargo.toml
test-zip_snappy/src/: lib.rs
test-zip_snappy/tests/: main.rs
test-zip_zstd/: Cargo.toml
test-zip_zstd/src/: lib.rs
test-zip_zstd/tests/: main.rs
test-zstd/: Cargo.toml
test-zstd/src/: lib.rs
test-zstd/tests/: main.rs
