[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
humansize = { workspace = true }
rayon = { workspace = true }
tempdir = "0.3"
test-snappy = { path = "../test-snappy" }
test-gzip = { path = "../test-gzip" }
test-tar = { path = "../test-tar" }
test-zip_br = { path = "../test-zip_br" }
test-zstd = { path = "../test-zstd" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }
futures = { version = "0.3", default_features = false, features = ["executor"] }

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "archive"
harness = false