[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
log = "0.4"
env_logger = "0.10"
rayon = { workspace = true }
tempdir = "0.3"
test-zip_br = { path = "../test-zip_br" }
test-zip_gzip = { path = "../test-zip_gzip" }
test-zip_snappy = { path = "../test-zip_snappy" }
test-zip_zstd = { path = "../test-zip_zstd" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }
futures = { version = "0.3", default_features = false, features = ["executor"] }

[[bench]]
name = "zip_br"
harness = false

[[bench]]
name = "zip_gzip"
harness = false

[[bench]]
name = "zip_snappy"
harness = false

[[bench]]
name = "zip_zstd"
harness = false
